# eda-server

./: .dockerignore  .editorconfig  .flake8  .gitguardian.yaml  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  README-MINIKUBE.md  README.md  Taskfile.dist.yaml  Taskfile.yaml  codecov.yml  local.yml  manage.py  openapi.json  poetry.toml  production.yml  pyproject.toml  pytest.ini  renovate.json  requirements_dev.txt  setup.cfg  sonar-project.properties
.cve-fix/: examples.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: autoupdate-poetry.yml  build-image.yml  ci.yaml  ci.yml  e2e-dispatch.yml  lint.yaml  release.yml  run-ci.yml  scheduled.yml  sonar-pr.yml  sync-openapi-spec.yml  test.yaml  ui-e2e.yml
.tekton/: run-atf-tests-pull-request.yaml
aap_eda/: conftest.py
aap_eda/templates/: base.html
aap_eda/users/: admin.py  apps.py  models.py  urls.py
automation/: README.md  ansible.cfg  hosts  playbook.yaml
automation/roles/: requirements.yaml
config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
designs/: models.yml
docs/: build_image.md  conf.py  contributing.md  custom_credential.md  deployment.md  development.md  howto.rst  index.rst  mac_development.md  make.bat  openapi-access.md  task_dispatcher.md  users.rst
eda/: Makefile  admin.py  api_urls.py  api_views.py  apps.py  consumers.py  models.py  project.py  routing.py  serializers.py  tuples.py  urls.py  v2_api_access.py  v2_api_serializers.py  v2_api_urls.py  v2_api_views.py  views.py
eda/codegen/: models.pyt  serializers.pyt  urls.pyt  v2_api_urls.pyt  v2_api_views.pyt  views.pyt
eda/designs/: models.yml
eda/migrations/: 0001_initial.py  0002_delete_alembicversion.py  0003_activationinstance_activation.py
eda/utils/: subprocess.py
features/: activation_vaulted_secrets.feature
requirements/: base.txt  code_generation.txt  local.txt  production.txt
scripts/: check_openapi_compliance.py  create_superuser.sh  eda_docker_cmd.sh  eda_kube.sh  eda_podman.sh  eda_ui_docker.sh
scripts/common/: logging.sh  utils.sh
src/aap_eda/: __init__.py  asgi.py  manage.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  utils.py
tests/e2e/: .flake8  .gitignore  .gitleaks.toml  .openapi-generator-ignore  .pre-commit-config.yaml  README.md  openapi.json  pyproject.toml  pytest.ini
tests/e2e/.github/workflows/: lint.yml
tests/e2e/.openapi-generator/: FILES
tests/e2e/docs/: development.md
tests/e2e/eda_api/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
tests/e2e/eda_api/api/: __init__.py  activation_instances_api.py  activations_api.py  audit_rules_api.py  auth_api.py  default_api.py  extra_vars_api.py  inventories_api.py  jobs_api.py  playbooks_api.py  projects_api.py  roles_api.py  rulebooks_api.py  rules_api.py  rulesets_api.py  tasks_api.py  users_api.py
tests/e2e/eda_api/apis/: __init__.py
tests/e2e/eda_api/docs/: Action.md  Activation.md  ActivationBaseRead.md  ActivationCreate.md  ActivationErrorMessage.md  ActivationInstance.md  ActivationInstanceBaseRead.md  ActivationInstanceCreate.md  ActivationInstanceLog.md  ActivationInstanceRead.md  ActivationInstanceStatusEnum.md  ActivationInstancesApi.md  ActivationLog.md  ActivationRead.md  ActivationUpdate.md  ActivationsApi.md  AuditChangedHost.md  AuditFiredRule.md  AuditRule.md  AuditRuleActivationRef.md  AuditRuleHost.md  AuditRuleJobInstance.md  AuditRuleJobInstanceEvent.md  AuditRulesApi.md  AuthApi.md  BearerResponse.md  BodyResetForgotPasswordApiAuthForgotPasswordPost.md  BodyResetResetPasswordApiAuthResetPasswordPost.md  BodyVerifyRequestTokenApiAuthRequestVerifyTokenPost.md  BodyVerifyVerifyApiAuthVerifyPost.md  DefaultApi.md  Detail.md  ErrorModel.md  ExecutionEnvironment.md  ExtraVar.md  ExtraVarRef.md  ExtraVarsApi.md  ExtraVarsCreate.md  ExtraVarsRead.md  ExtraVarsRef.md  (+81 more)
tests/e2e/eda_api/model/: __init__.py  action.py  activation.py  activation_base_read.py  activation_create.py  activation_error_message.py  activation_instance.py  activation_instance_base_read.py  activation_instance_create.py  activation_instance_log.py  activation_instance_read.py  activation_instance_status_enum.py  activation_log.py  activation_read.py  activation_update.py  audit_changed_host.py  audit_fired_rule.py  audit_rule.py  audit_rule_activation_ref.py  audit_rule_host.py  audit_rule_job_instance.py  audit_rule_job_instance_event.py  bearer_response.py  body_reset_forgot_password_api_auth_forgot_password_post.py  body_reset_reset_password_api_auth_reset_password_post.py  body_verify_request_token_api_auth_request_verify_token_post.py  body_verify_verify_api_auth_verify_post.py  detail.py  error_model.py  execution_environment.py  extra_var.py  extra_var_ref.py  extra_vars_create.py  extra_vars_read.py  extra_vars_ref.py  extravars.py  extravars_ref.py  fire_counts_detail_ref.py  fire_counts_list_ref.py  http_validation_error.py  (+66 more)
tests/e2e/eda_api/models/: __init__.py
tests/e2e/eda_qa/: cmd.py  config.py  exceptions.py  models.py
tests/e2e/eda_qa/api/: __init__.py  activations.py  client.py  common.py  extra_vars.py  projects.py  rulebooks.py  rules.py  rulesets.py  tasks.py  users.py  utils.py
tests/e2e/eda_qa/conf/: settings.yaml
tests/e2e/eda_qa/tests/api/: __init__.py  conftest.py  test_projects.py  test_rules.py  test_rulesets.py
tests/e2e/eda_qa/utils/: __init__.py  common.py  fernet.py  http_client.py  projects.py
tests/e2e/utils/api-client-generator/: config.yml  generate.sh
tests/e2e/utils/websockets/: server.py
tests/integration/: conftest.py  constants.py  test_advisory_lock.py  test_logging.py  test_sanity.py  utils.py
tests/unit/: test_activation_job_namespace.py  test_ansible_rulebook.py  test_application_settings.py  test_certificate_validation.py  test_credential_plugins.py  test_git.py  (+28 more)
tools/: convert_sa_to_django.py
(+838 files in other folders)
