[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# -------------------------------------
# Poetry: Metadata
# -------------------------------------

[tool.poetry]
name = "aap-eda"
version = "0.2.0"
description = ""
authors = ["Red Hat, Inc. <info@ansible.com>"]
readme = "README.md"
packages = [{ include = "aap_eda", from = "src" }]
include = ["aap_eda/data/playbooks/*.yml"]

[tool.poetry.scripts]
aap-eda-manage = 'aap_eda.manage:main'

# -------------------------------------
# Poetry: Dependencies
# -------------------------------------
[tool.poetry.extras]
all = ["psycopg"]
dev = ["psycopg-binary"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
django = ">=4.2,<4.3"
djangorestframework = "3.15.*"
dynaconf = ">=3.1.12,<3.3"
drf-spectacular = ">=0.26.5,<0.27"
channels = { version = "4.0.*", extras = ["daphne"] }
psycopg-binary = { version = "*", optional = true }
django-rq = "^2.8.0"
rq = "^1.13.0"
django-filter = ">23.2,<24"
pydantic = ">=1.8.1,<1.11"
cryptography = ">=42,<43"
kubernetes = "26.1.*"
podman = "4.9.*"
rq-scheduler = "^0.10"
django-ansible-base = { git = "https://github.com/ansible/django-ansible-base.git", branch = "devel", extras = [
    "channel_auth",
    "rbac",
    "redis_client",
] }
jinja2 = ">=3.1.3,<3.2"
django-split-settings = "^1.2.0"
pexpect = "^4.9.0"
ansible-runner = ">=2.3"
python-gnupg = "^0.5.2"
autobahn = { git = "https://github.com/crossbario/autobahn-python.git", rev = "v24.4.2" }
psycopg = "^3.1.17"
xxhash = "3.4.*"
pyjwt = { version = "2.7.*", extras = ["crypto"] }
ecdsa = "0.18.*"
insights-analytics-collector = "^0.3.2"
distro = "^1.9.0"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-django = "*"
pytest-asyncio = "*"
requests = { version = "*", python = "<4.0" }
pytest-cov = "^4.1.0"
pytest-lazy-fixture = "^0.6.3"
requests-mock = "*"
httpie = "^3.2.3"

[tool.poetry.group.lint.dependencies]
flake8 = "*"
isort = "*"
black = "*"
flake8-broken-line = { version = "*", python = "<4.0" }
flake8-string-format = "*"
# This is an experimental linter.
ruff = "*"
# The rull claims that the flake8 plugins listed below are re-implemented,
#   These plugins will remain included until it's verified.
pep8-naming = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-docstrings = "*"
flake8-eradicate = { version = "*", python = "<4.0" }
flake8-print = "*"

[tool.poetry.group.dev.dependencies]
ipython = "*"

# -------------------------------------
# Tools
# -------------------------------------

[tool.black]
line-length = 79
target-version = ["py39", "py310"]

[tool.isort]
profile = "black"
combine_as_imports = true
line_length = 79

[tool.ruff]
line-length = 79
select = [
    "E",
    "F",
    "D",   # flake8-docstrings
    "TID", # flake8-tidy-imports
]
extend-ignore = [
    "D1", #  Missing docstrings errors
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"src/aap_eda/core/migrations/*" = ["E501"]
"tests/**/*.py" = [
    "S101",   # Asserts allowed in tests
    "ARG",    # Fixtures are not always used explicitly
    "SLF001", # Call private methods in tests
    "D",      # Docstrings are not required in tests
]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.pydocstyle]
convention = "pep257"
